# python-project-83

./: .gitignore  Makefile  README.md  build.sh  client.js  database.sql  pyproject.toml
.github/workflows/: README.md  app-lint.yml  app-test.yml
page_analyzer/: __init__.py  app.py  db_utils.py
page_analyzer/templates/: 404.html  check_result.html  error.html  footer.html  header.html  index.html  urls.html
page_analyzer/tests/: conftest.py  test_analyzer.py
tests/: fake_db_utils.py  test_analyzer.py
tests/fixtures/: right.html  wrong.html
